test_regress/t/t_semaphore_bad.out
%Error: t/t_semaphore.v:17:4: Can't find typedef: 'semaphore'
   17 |    semaphore s;
      |    ^~~~~~~~~
%Error: t/t_semaphore.v:18:4: Can't find typedef: 'semaphore'
   18 |    semaphore s2;
      |    ^~~~~~~~~
%Error: Exiting due to
